r2dbc h2 mem db 아무리 해도 안되네 담에 파일 디비로 해보자 아오

--- a/planee-api/src/main/resources/application.yml
+++ b/planee-api/src/main/resources/application.yml
@@ -1,2 +1,16 @@
 server:
   port: 8900
+
+#spring:
+#  r2dbc:
+#    url: r2dbc:h2:mem:testdb
+
+  datasource:
+    schema: schema.sql
+
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          r2dbc : DEBUG
