--- a/planee-api/src/main/resources/application.yml
+++ b/planee-api/src/main/resources/application.yml
@@ -1,12 +1,11 @@
 server:
   port: 8900
 
-#spring:
-#  r2dbc:
-#    url: r2dbc:h2:mem:testdb
-
-  datasource:
-    schema: schema.sql
+spring:
+  r2dbc:
+    url: r2dbc:h2:mem:///test?options=DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    name: sa
+    password:
 
 logging:
   level:
