--- a/planee-api/build.gradle
+++ b/planee-api/build.gradle
@@ -4,9 +4,9 @@ plugins {
     id 'java'
 }
 
-group = 'com.juntaek'
+group = 'me.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '11'
+// sourceCompatibility = '11'
 
 configurations {
     compileOnly {
@@ -16,24 +16,14 @@ configurations {
 
 repositories {
     mavenCentral()
-    maven { url 'https://repo.spring.io/milestone' }
 }
 
 dependencies {
-//    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-boot-starter-webflux'
-
-    // r2dbc
-    implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'
-    runtimeOnly 'com.h2database:h2'
-    runtimeOnly 'io.r2dbc:r2dbc-h2'
-    testImplementation 'io.projectreactor:reactor-test'
-
-
+    implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
+    runtimeOnly 'com.h2database:h2'
     annotationProcessor 'org.projectlombok:lombok'
-
     testImplementation('org.springframework.boot:spring-boot-starter-test') {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
